--- a/07-SEM.Rmd
+++ b/07-SEM.Rmd
@@ -383,7 +383,7 @@ Bootstrapped estimates are also available with se = "bootstrap"
 ```
 
 
-## Types of models other than growth models (brief intro)
+## Types of longitudinal models other than growth models (brief intro)
 
 
 ```{r}
@@ -575,39 +575,74 @@ semPaths(fit.long.cross, layout = "tree3")
 
 ### Longitudinal mediation model
 
-
-
 ```{r}
 #Do Self-Reported Social Experiences Mediate the Effect of Extraversion on Life Satisfaction and Happiness?
 #number close friends
-
+library(readr)
 TSS_sub <- read_csv("~/Box Sync/5165 Applied Longitudinal Data Analysis/Longitudinal/TSS_sub.csv")
 
 
-
-Pscon.model3<-'
-#LV
+scon.model6<-'
+# definine extraversion
 bfie =~ a1bfi01 + a1bfi06r + a1bfi11 + a1bfi16 + a1bfi21r + a1bfi26 + a1bfi31r + a1bfi36
+
+# correlated residuals
 a1bfi11 ~~  a1bfi16
 a1bfi06r ~~ a1bfi21r + a1bfi31r
 a1bfi21r ~~ a1bfi31r + a1bfi01
-iscon=~ isosat + ipclrel + ifllon
-nscon=~ nsosat + npclrel + nfllon
-ipclrel~~npclrel
-#correlations
-bfie~~a1ced04
-#regressions
-iscon ~ a1*bfie + d1*a1ced04
-nscon ~ a2*bfie + d2*a1ced04 + m*iscon
-m1ced04 ~  b*iscon + c*bfie + y*a1ced04
-#effects
-indirect:= a1*b
-total:= indirect + c
-'
-Pscon3 <- sem(Pscon.model3, data=TSS_sub, missing = "ml", fixed.x = FALSE)
-summary(Pscon3, standardized=T, fit.measures=TRUE)
-```
 
+#define social connection at 4 waves
+hconnect=~h1clrel + h1satfr + h1sosat + h1ced05
+jconnect=~j1clrel + j1satfr + j1sosat + j1ced05
+kconnect=~k1clrel + k1satfr + k1sosat + k1ced05
+mconnect=~m1clrel + m1satfr + m1sosat + m1ced05
+
+#correlate residuals
+h1clrel ~~ j1clrel + k1clrel + m1clrel
+j1clrel ~~ k1clrel + m1clrel
+k1clrel ~~ m1clrel
+h1satfr ~~ j1satfr + k1satfr + m1satfr
+j1satfr ~~ k1satfr + m1satfr
+k1satfr ~~ m1satfr 
+h1sosat ~~ j1sosat + k1sosat + m1sosat 
+j1sosat ~~ k1sosat + m1sosat 
+k1sosat ~~ m1sosat
+h1ced05 ~~ j1ced05 + k1ced05 + m1ced05
+j1ced05 ~~ k1ced05 + m1ced05
+k1ced05 ~~ m1ced05
+
+# same time covariances between extraversion, connection, satisfaction
+bfie~~a1swls
+hconnect ~~ h1swls
+jconnect ~~ j1swls
+kconnect ~~ k1swls
+
+#regressions to calculate indiret effects
+hconnect ~ a1*bfie + d1*a1swls 
+jconnect ~ a2*bfie + d2*h1swls + m1*hconnect
+kconnect ~ a3*bfie + d3*j1swls + m2*jconnect
+mconnect ~ a4*bfie + d4*k1swls + m3*kconnect
+h1swls ~ y1*a1swls + c1*bfie 
+j1swls ~ y2*h1swls + c2*bfie + b1*hconnect
+k1swls ~ y3*j1swls + c3*bfie + b2*jconnect 
+m1swls ~ y4*k1swls + c4*bfie + b3*kconnect
+
+#effects 
+# extraversion -> connect (a)
+# connect ->  swb (b)
+# extraversion -> swb (c)
+# auto-regressive connection (m)
+# auto-regressive swb (y)
+
+ind:= a1*b1*y3*y4 + a1*m1*b2*y4 + a1*m1*m2*b3 + a2*b2*y4 + a2*m2*b3 + a3*b3
+total:= ind + c4 + c3*y4 + c2*y3*y4 + c1*y2*y3*y4
+'
+scon62 <- sem(scon.model6, data=TSS_sub, missing = "ml", fixed.x = FALSE)
+summary(scon62, standardized=T, fit.measures=TRUE)
+
+# use se = "bootstrap" in the fit function to get bootstrapped se
+
+```
 
 
 ### Summary of panel SEM models. 
@@ -620,7 +655,7 @@ The implimentation of growth models in an SEM framework is very similar to the H
 
 Other than time, the idea behind the growth model is exactly the same.
 
-### coding time
+### Coding time
 One key these models is how you code time. Beause we are working with qualitative time rather than continuous everyone has to have the same time structure. 
 
 In terms of definiting a latent intercept and latent slope the intercept is defined as when the slope loading is zero. This idea can be thought of as the intercept is the mean of the DV when the predictor is 0, where we have time as the predictor. 
@@ -728,8 +763,6 @@ summary(fit.6)
 
 
 
-
-
 ### multivariate growth curves
 
 ```{r}
@@ -766,42 +799,274 @@ EEEEeeeee that is not good. What happened?
 
 
 
-
-
-
 ## Measurement Invariance (MI)
 
-Configural
+To meaningfully look at means, we need to have the means mean the same thing. In other words, without using the word mean, we need to make sure that the measurment of the construct is consistent across time. If it isn't, then what we may see as change actually reflect people responding to the indicators differently. For example, a common item on an extraversion scale is "Do you like to go to parties?" This is likely interpretted differently by a 20 year old compared to a 70 year old. This is due to what is normative, what parties look like that a typical 20 and 70 year old go to, etcetera. Another way to look at this is the item "2 x 3 = X, solve for X". The reasons that a 8 year old and a 18 year old get the item incorrect is likely for different reasons (ie knowledge vs not being careful). 
 
-Weak
+Maturation is the easiest way to see differences, but it also happens when you want to compare groups ie some anova design. This assumption is typically never critically examined.  
 
-Strong
+### types of MI
+Configural (pattern). Typically always true with a decent measure of your construct. Can be tested through test statistics and eye-balling. Serves as default. 
 
-Strict
+Weak (metric/loading). Can be easily met. Not meeting this shows big problems, unless you are working with a really large dataset (where there is large power to find differences). 
 
-### More on mean structures
+Strong (Scalar/intercept). Need to meet this designation to run longitudinal models and look at means across time. 
 
-We need to fix something to 0 to identify/set the scale for means. Just like with the covariance structure when we set the loading or variance to 1. 
+Strict (residual/error variance). Not necessarily better than Strong, and does not need to be satisfied to use longitudinal models. Why might this not hold even if you are assessing the same construct? Hint: think of what residual variance is made up of. 
 
+### Testing MI
 
-1. Fixed factor: fix the latent mean to 0 (the default in lavaan and Mplus)
+configural (baseline)
+
 ```{r}
+config <- '
+## define latent variables
+Pos1 =~ PosAFF11 + PosAFF21 + PosAFF31
+Pos2 =~ PosAFF12 + PosAFF22 + PosAFF32
+Pos3 =~ PosAFF13 + PosAFF23 + PosAFF33
+
+
+## correlated residuals across time
+PosAFF11 ~~ PosAFF12 + PosAFF13
+PosAFF12 ~~ PosAFF13
+PosAFF21 ~~ PosAFF22 + PosAFF23
+PosAFF22 ~~ PosAFF23
+PosAFF31 ~~ PosAFF32 + PosAFF33
+PosAFF32 ~~ PosAFF33
+
+
+'
+
+config <- cfa(config, data=long, meanstructure=TRUE, std.lv=TRUE)
+
+summary(config, standardized=TRUE, fit.measures=TRUE)
+```
+
+weak (constrain loadings) 
+
+```{r}
+weak <- '
+## define latent variables
+Pos1 =~ L1*PosAFF11 + L2*PosAFF21 + L3*PosAFF31
+Pos2 =~ L1*PosAFF12 + L2*PosAFF22 + L3*PosAFF32
+Pos3 =~ L1*PosAFF13 + L2*PosAFF23 + L3*PosAFF33
+
+
+## free latent variances at later times (only set the scale once)
+Pos2 ~~ NA*Pos2
+Pos3 ~~ NA*Pos3
+
+## correlated residuals across time
+PosAFF11 ~~ PosAFF12 + PosAFF13
+PosAFF12 ~~ PosAFF13
+PosAFF21 ~~ PosAFF22 + PosAFF23
+PosAFF22 ~~ PosAFF23
+PosAFF31 ~~ PosAFF32 + PosAFF33
+PosAFF32 ~~ PosAFF33
+
+
+'
+
+weak <- cfa(weak, data=long, meanstructure=TRUE, std.lv=TRUE)
+
+summary(weak, standardized=TRUE, fit.measures=TRUE)
+
 
 ```
 
 
-2. Marker variable: fix one item’s intercept to 0 (the latent mean is equal
-to that item’s mean)
+Strong (constrain loadings and intercepts)
 
 ```{r}
+strong <- '
+## define latent variables
+Pos1 =~ L1*PosAFF11 + L2*PosAFF21 + L3*PosAFF31
+Pos2 =~ L1*PosAFF12 + L2*PosAFF22 + L3*PosAFF32
+Pos3 =~ L1*PosAFF13 + L2*PosAFF23 + L3*PosAFF33
+
+
+## free latent variances at later times (only set the scale once)
+Pos2 ~~ NA*Pos2
+Pos3 ~~ NA*Pos3
+
+
+## correlated residuals across time
+PosAFF11 ~~ PosAFF12 + PosAFF13
+PosAFF12 ~~ PosAFF13
+PosAFF21 ~~ PosAFF22 + PosAFF23
+PosAFF22 ~~ PosAFF23
+PosAFF31 ~~ PosAFF32 + PosAFF33
+PosAFF32 ~~ PosAFF33
+
+
+## constrain intercepts across time
+PosAFF11 ~ t1*1
+PosAFF21 ~ t2*1
+PosAFF31 ~ t3*1
+
+
+PosAFF12 ~ t1*1
+PosAFF22 ~ t2*1
+PosAFF32 ~ t3*1
+
+
+PosAFF13 ~ t1*1
+PosAFF23 ~ t2*1
+PosAFF33 ~ t3*1
+
+
+## free latent means at later times (only set the scale once)
+Pos2 ~ NA*1
+Pos3 ~ NA*1'
+
+strong <- cfa(strong, data=long, meanstructure=TRUE, std.lv=TRUE)
+
+summary(strong, standardized=TRUE, fit.measures=TRUE)
+```
+
+Strict (loadings, intercept, residual variances)
+
+```{r}
+strict <- '
+## define latent variables
+Pos1 =~ L1*PosAFF11 + L2*PosAFF21 + L3*PosAFF31
+Pos2 =~ L1*PosAFF12 + L2*PosAFF22 + L3*PosAFF32
+Pos3 =~ L1*PosAFF13 + L2*PosAFF23 + L3*PosAFF33
+
+
+## free latent variances at later times (only set the scale once)
+Pos2 ~~ NA*Pos2
+Pos3 ~~ NA*Pos3
+
+
+## correlated residuals across time
+PosAFF11 ~~ PosAFF12 + PosAFF13
+PosAFF12 ~~ PosAFF13
+PosAFF21 ~~ PosAFF22 + PosAFF23
+PosAFF22 ~~ PosAFF23
+PosAFF31 ~~ PosAFF32 + PosAFF33
+PosAFF32 ~~ PosAFF33
+
+## equality of residuals 
+PosAFF11 ~~ r*PosAFF11 
+PosAFF12 ~~ r*PosAFF12
+PosAFF13 ~~ r*PosAFF13
+
+PosAFF21 ~~ r*PosAFF21 
+PosAFF22 ~~ r*PosAFF22
+PosAFF23 ~~ r*PosAFF23
+
+PosAFF31 ~~ r*PosAFF31 
+PosAFF32 ~~ r*PosAFF32
+PosAFF33 ~~ r*PosAFF33
+
+
+## constrain intercepts across time
+PosAFF11 ~ t1*1
+PosAFF21 ~ t2*1
+PosAFF31 ~ t3*1
+
+
+PosAFF12 ~ t1*1
+PosAFF22 ~ t2*1
+PosAFF32 ~ t3*1
+
+
+PosAFF13 ~ t1*1
+PosAFF23 ~ t2*1
+PosAFF33 ~ t3*1
+
+
+## free latent means at later times (only set the scale once)
+Pos2 ~ NA*1
+Pos3 ~ NA*1'
+
+strict <- cfa(strict, data=long, meanstructure=TRUE, std.lv=TRUE)
+
+summary(strict, standardized=TRUE, fit.measures=TRUE)
+```
+
+Note that there are other types of MI that we could investigate, depending on what we are interested in. We could look at equality of latent means and variances, as well as regressions, if they were in the model. 
+
+
+### Comparing the models
+Usually done through chi-square difference test. But this is a very sensitive test, especially with larger samples. Better to look at changes in CFI. If delta is .01 or greater than maybe it shows misfit. 
+
+```{r}
+##Compare configural and weak model
+anova(config, weak)
+```
+
+```{r}
+##Compare weak and strong model
+anova(weak, strong)
+
+fitmeasures(weak)['cfi']
+fitmeasures(strong)['cfi']
+fitmeasures(strict)['cfi']
 
 ```
 
-3. Effects coding: constrain all item intercepts to average 0
+
+
+## second order growth model
+
+Repeated measures are latent. Why would we want to do this? 
 
 ```{r}
+sec.order <- '
+## define latent variables
+Pos1 =~ NA*PosAFF11 + L1*PosAFF11 + L2*PosAFF21 + L3*PosAFF31
+Pos2 =~ NA*PosAFF12 + L1*PosAFF12 + L2*PosAFF22 + L3*PosAFF32
+Pos3 =~ NA*PosAFF13 + L1*PosAFF13 + L2*PosAFF23 + L3*PosAFF33
+
+## intercepts
+PosAFF11 ~ t1*1
+PosAFF21 ~ t2*1
+PosAFF31 ~ t3*1
+
+PosAFF12 ~ t1*1
+PosAFF22 ~ t2*1
+PosAFF32 ~ t3*1
+
+PosAFF13 ~ t1*1
+PosAFF23 ~ t2*1
+PosAFF33 ~ t3*1
+
+
+## correlated residuals across time
+PosAFF11 ~~ PosAFF12 + PosAFF13
+PosAFF12 ~~ PosAFF13
+PosAFF21 ~~ PosAFF22 + PosAFF23
+PosAFF22 ~~ PosAFF23
+PosAFF31 ~~ PosAFF32 + PosAFF33
+PosAFF32 ~~ PosAFF33
+
+
+## latent variable intercepts
+Pos1 ~ 0*1
+Pos2  ~ 0*1
+Pos3  ~ 0*1
+
+#model constraints for effect coding
+## loadings must average to 1
+L1 == 3 - L2 - L3
+## means must average to 0
+t1 == 0 - t2 - t3
+
+i =~ 1*Pos1 + 1*Pos2 + 1*Pos3 
+s =~ 0*Pos1 + 1*Pos2 + 2*Pos3 '
+
+
+fit.sec.order <- growth(sec.order, data=long, missing = "ML")
+summary(fit.sec.order, fit.measures=TRUE)
 
 ```
+
+
+
+
+
 
 
 
